Fix css not responsive

--- a/src/app/portfolio/portfolio-list/portfolio-list.component.scss
+++ b/src/app/portfolio/portfolio-list/portfolio-list.component.scss
@@ -53,15 +53,9 @@
   @media (min-width: 992px) {
     height: 200%;
     position: absolute;
-    left: -45%;
+    right: 40%;
     top: -25%;
   }
-  //@media (min-width: 992px) and (max-width: 1439px) {
-  //  height: 200%;
-  //  position: absolute;
-  //  left: -80%;
-  //  top: -25%;
-  //}
   @media (max-width: 991px) {
     display: none;
   }
